# SSO-for-chatbot

./: .gitignore  README.md  TODO.md  TODO.txt  example.php  gunicorn.service  gunicorn_config.py  nginx.conf  nginx.sh  pyproject.toml  setup.sh  start.html  wsgi.py
.idx/: dev.nix
app/: app.py  app2.py  test.py  utils.py
app/templates/: confirm_logout.html  fill_form.html  login.html  submission_error.html  submission_success.html
certs/: cert.pem  full.pem  key.pem
config/: sp_metadata.xml
